--- a/style.css
+++ b/style.css
@@ -172,3 +172,34 @@ cards
 .card-footer i {
   font-size: 1.5rem;
 }
+/* Using media query */
+/* @media screen and (min-width: 768px) {
+  .cards-center {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 2rem;
+  }
+}
+@media screen and (min-width: 1170px) {
+  .cards-center {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 2rem;
+  }
+} */
+
+/* USING ONLY GRID */
+
+/*  THREE COLUMN LAYOUT (1170-64)/3=368.6 */
+/* .cards-center {
+  display: grid;
+  grid-column-gap: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(368.6px, 1fr));
+} */
+
+/* FOUR COLUMN LAYOUT (1170-96)/4=268.5 */
+.cards-center {
+  display: grid;
+  column-gap: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(268.5px, 1fr));
+}
